<resources>
    <string name="app_name">Para</string>

    <string name="expenseCategoryLabel">category:</string>
    <string name="expenseNameLabel">name:</string>
    <string name="expenseValueLabel">value:</string>
    <string name="addExpense">add</string>
    <string name="expenseDescriptionLabel">description:</string>
    <string name="sign_in">sign in</string>
    <string name="sign_in_google">sign in with google</string>
    <string name="sign_up">sign up</string>
    <string name="send_mail">send mail</string>
    <string name="sign_out">sign out</string>
    <string name="viewExpenses">view all</string>
</resources>
